# gemini-robotics-er-demo-rs

./: Cargo.toml  README.md  config.toml  index.html
frontend/: apiHandling.js  app.js  imageHandling.js  index.html  overlay.js  style.css
src/: logging.rs  main.rs  server.rs
