[package]
name = "gemini-robotics-er-demo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
actix-files = "0.6"
toml = "0.8.12"
lazy_static = "1.4.0"
